RESOLVED FIXED45677
[WebView canMarkAllTextMatches] can crash if called after [WebView close]
https://bugs.webkit.org/show_bug.cgi?id=45677
Summary [WebView canMarkAllTextMatches] can crash if called after [WebView close]
John Sullivan
Reported 2010-09-13 09:14:23 PDT
This is in Radar as <rdar://problem/8404890>. [WebView canMarkAllTextMatches] calls through to WebCore frame-traversal code. This can crash if the webView has already been closed. This is the same basic problem as in bug 45175, but I missed this entry point when fixing that bug.
Attachments
One more early bail-out to complete the work that was begun in 45175. (1.21 KB, patch)
2010-09-13 09:24 PDT, John Sullivan
aroben: review+
John Sullivan
Comment 1 2010-09-13 09:24:01 PDT
Created attachment 67415 [details] One more early bail-out to complete the work that was begun in 45175.
Adam Roben (:aroben)
Comment 2 2010-09-13 09:28:24 PDT
Comment on attachment 67415 [details] One more early bail-out to complete the work that was begun in 45175. View in context: https://bugs.webkit.org/attachment.cgi?id=67415&action=prettypatch r=me
John Sullivan
Comment 3 2010-09-13 09:33:47 PDT
Fixed in r67393.
Note You need to log in before you can comment on or make changes to this bug.