https://bugs.webkit.org/show_bug.cgi?id=45677 [WebView canMarkAllTextMatches] can crash if called after [WebView close]

Reviewed by Adam Roben.

<rdar://problem/8404890>

* WebView/WebView.mm:
(-[WebView canMarkAllTextMatches]):
Return NO immediately if the webview has already been closed. This was an overlooked
case from the fix for 45175.



git-svn-id: svn://svn.chromium.org/blink/trunk@67393 bbb929c8-8fbe-4397-9dbb-9b2b20218538